refactoring DicomObject minimizing memory allocation

--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -35,6 +35,26 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.dcm4assange.elmdict</groupId>
+      <artifactId>dcm4assange-elmdict-acuson</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.dcm4assange.elmdict</groupId>
+      <artifactId>dcm4assange-elmdict-agfa</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.dcm4assange.elmdict</groupId>
+      <artifactId>dcm4assange-elmdict-camtron</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.dcm4assange.elmdict</groupId>
+      <artifactId>dcm4assange-elmdict-elscint</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.dcm4assange.tool</groupId>
       <artifactId>dcm4assange-tool-dcmdump</artifactId>
       <version>${project.version}</version>
