add module org.dcm4assange.conf.model

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <version>1.0.0</version>
   <modules>
     <module>standard</module>
+    <module>conf</module>
     <module>core</module>
     <module>elmdict</module>
     <module>tool</module>
