--- a/net/pom.xml
+++ b/net/pom.xml
@@ -26,10 +26,19 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>dcm4assange-conf</artifactId>
-  <packaging>pom</packaging>
-  <modules>
-    <module>model</module>
-  </modules>
+  <artifactId>dcm4assange-net</artifactId>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.dcm4assange</groupId>
+      <artifactId>dcm4assange-conf-model</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.dcm4assange</groupId>
+      <artifactId>dcm4assange-core</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+  </dependencies>
 
 </project>
