--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,13 @@
   <groupId>org.dcm4assange</groupId>
   <artifactId>dcm4assange-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.0</version>
+  <version>7.0.0</version>
   <modules>
     <module>standard</module>
     <module>conf</module>
     <module>core</module>
     <module>elmdict</module>
+    <module>net</module>
     <module>tool</module>
     <module>assembly</module>
   </modules>
