--- a/core/pom.xml
+++ b/core/pom.xml
@@ -33,6 +33,10 @@
       <artifactId>dcm4assange-standard</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
