working on module org.dcm4assange.net

--- a/tool/pom.xml
+++ b/tool/pom.xml
@@ -32,6 +32,7 @@
   <modules>
     <module>dcmdump</module>
     <module>storescp</module>
+    <module>storescu</module>
   </modules>
 
   <dependencies>
