--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -75,6 +75,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.dcm4assange.tool</groupId>
+      <artifactId>dcm4assange-tool-storescu</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-core</artifactId>
       <version>${logback.version}</version>
