dcmbrenchmark utility to measure time and memory usage on parsing a specified DICOM file

--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -66,6 +66,11 @@
     </dependency>
     <dependency>
       <groupId>org.dcm4assange.tool</groupId>
+      <artifactId>dcm4assange-tool-dcmbenchmark</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.dcm4assange.tool</groupId>
       <artifactId>dcm4assange-tool-dcmdump</artifactId>
       <version>${project.version}</version>
     </dependency>
