--- a/tool/pom.xml
+++ b/tool/pom.xml
@@ -30,6 +30,7 @@
   <packaging>pom</packaging>
 
   <modules>
+    <module>dcmbenchmark</module>
     <module>dcmdump</module>
     <module>storescp</module>
     <module>storescu</module>
